# library

./: README.md  index.html  package-lock.json  package.json  schema.sql  tailwind.config.js  vite.config.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/adapters/tauri/: errors.rs  mod.rs
src-tauri/src/app/: mod.rs  state.rs
src-tauri/src/app/commands/: agenda_commands.rs  backup_commands.rs  book_commands.rs  collection_commands.rs  goal_commands.rs  integrity_commands.rs  journal_commands.rs  note_commands.rs  reading_commands.rs  session_commands.rs  settings_commands.rs  statistics_commands.rs  tag_commands.rs
src-tauri/src/app/dicontainer/: mod.rs
src-tauri/src/app/dtos/: agenda_block_dto.rs  book_dto.rs  book_summary_dto.rs  collection_dto.rs  goal_dto.rs  journal_entry_dto.rs  mod.rs  note_dto.rs  reading_dto.rs  session_dto.rs  setting_dto.rs  tag_dto.rs
src-tauri/src/app/mappers/: mod.rs
src-tauri/src/application/: mod.rs
src-tauri/src/application/dtos/: agenda_block_dto.rs  book_dto.rs  book_summary_dto.rs  collection_dto.rs  goal_dto.rs  journal_entry_dto.rs  mod.rs  note_dto.rs  reading_dto.rs  session_dto.rs  setting_dto.rs  statistics_dto.rs  tag_dto.rs
src-tauri/src/application/services/: mod.rs
src-tauri/src/application/use_cases/: mod.rs
src-tauri/src/core/: mod.rs
src-tauri/src/core/domains/: book.rs  collection.rs  journal_entry.rs  mod.rs  note.rs  (+3 more)
src-tauri/src/domain/: mod.rs
src-tauri/src/infrastructure/: mod.rs
(+458 files in other folders)
