[package]
name = "library"
version = "0.1.0"
description = "Reading Management Desktop Application"
authors = ["Felipe Santos"]
edition = "2021"

[lib]
name = "library_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.31", features = ["bundled", "chrono"] }
chrono = { version = "0.4", features = ["serde"] }
dirs = "5"
thiserror = "1.0"
anyhow = "1.0"

